Fixed issues with footer, navigation and logo alignment

--- a/source/assets/stylesheets/_footer.scss
+++ b/source/assets/stylesheets/_footer.scss
@@ -70,8 +70,8 @@ img {
     h5 {
         color: $footer-header;
         font-size: 14px;
-        font-weight: 400;
-        margin: 0 0 30px;
+        font-weight: 700;
+        margin: 0 0 5px;
     }
 }
 
