--- a/source/assets/stylesheets/_header.scss
+++ b/source/assets/stylesheets/_header.scss
@@ -26,6 +26,7 @@ header.top {
 .header-container {
     margin: 0 auto;
     width: 100%;
+    position: relative;
     @include grid-container;
     @media (min-width: $screen-sm) {
         max-width: 540px;
@@ -73,8 +74,10 @@ header.top {
         z-index: -1;
         height: 100%;
         overflow: hidden;
-        transition: $transition;
         transform: translatex(-100%);
+        height: 0px;
+        transition: transform 0.2s ease-in-out, height 0.15s ease-in-out;
+        transition-delay: 0s, 0.50s;
         ul {
             position: relative;
             z-index: 2;
@@ -93,8 +96,9 @@ header.top {
             }
         }
         &.open {
-            transition: $transition;
             transform: translatex(0%);
+            height: 100%;
+            transition: height 0.02s ease-in-out, transform 0.2s ease-in-out; 
             &:after {
                 content: "";
                 background: rgba(0, 0, 0, 0.8);
@@ -122,7 +126,7 @@ header.top {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    transition: $transition;
+    // transition: $transition;
     @media (max-width: $screen-md-min) {
         width: 100%;
         padding: 30px 10px;
